Fix: image not showing in heroku

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,7 +14,7 @@
 }
 
 .jumbotron {
-  background-image: url("home_bg_img.jpg");
+  background-image: url("https://i.ibb.co/1Jnqbt3/home-bg-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: white;
